# ddep_capstyone

./: .allowed_outdated_dependencies  .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
ci/scripts/: check-ipynb-compliance.sh  check-plain-compliance.sh
documentation/: csai-353-vault.typ  sink.typ
documentation/common/lib/: contentBox.typ  slideLayouts.typ  theme.typ
notebooks/: 1.lab.1-wine-quality-mlp.ipynb  2.lab.1-gan-explorer-fashion-mnist.ipynb
src/: .dockerignore  Dockerfile  PROJECT_README.md  docker-compose.yml  example_usage.py  main.py  requirements.txt  test_api.py  test_designs.py  test_renders.py
src/.github/workflows/: ci.yml
src/api/: __init__.py  assistant.py  main.py  session_manager.py
src/app/: main.py
src/frontend/: app.js  index.html  styles.css
src/lib/: console_manager.py
src/models/: __init__.py  design_generator.py  render_generator.py
