[build-system]
requires = ["setuptools >= 69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csds-353-vault"
version = "0.0.1"
description = "Data Science and Machine Learning Vault"
authors = [{name = "Jala R&D", email = "RD_GenerativeAI@jalasoft.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.12"

dependencies = [
  "ipykernel==7.1.0",
  "ipympl==0.9.8",
  "matplotlib==3.10.7",
  "numpy==2.3.4",
  "pandas==2.3.3",
  "rich==14.2.0",
  "scikit-learn==1.7.2",
  "torch==2.9.0",
  "torchtext==0.18.0",
  "torchvision==0.24.0",
  "seaborn==0.13.2"
]

[project.scripts]
csds-353-vault = "app.main:main"

[tool.mypy]
python_version = "3.12"
strict = true
